<resources>
    <string name="app_name">""</string>


    <!-- REGISTRO -->

    <string name="register_title">Registrate</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="email">E-mail</string>
    <string name="phone">Teléfono</string>
    <string name="street">Calle</string>
    <string name="number">Número</string>
    <string name="btn_register">Enviar</string>
    <string name="login_action">¿Ya tenés una cuenta? Inicia sesión</string>
    <string name="show_password_main">Mostrar contraseña</string>
    <string name="show_password_confirm">Mostrar contraseña del campo confirmar</string>

    <!-- Perfil usuario -->

    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="editar">Editar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="calle">calle</string>
    <string name="telefono">telefono</string>
    <string name="Mi_cuenta">Mi cuenta</string>
    <string name="n_mero">Número</string>
    <string name="call">Call</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="perfil_de_usuario">Perfil de Usuario</string>
    <string name="volver_a_suscribirse">Volver a Suscribirse</string>
    <string name="guardar">Guardar</string>


    <!-- PRODUCTS-->
    <string name="name1">KING KONG BURGER</string>
    <string name="description1">6/8 porciones. Burger XXL de 1kg, con queso cheddar, lechuga, tomate y panceta crocante.</string>
    <string name="price1">$4500</string>
    <string name="name2">TASTY RICCA</string>
    <string name="description2">Pan casero. Burger de carne 220gr. Queso cheddar fundido, lechuga, tomate huevo planchado.</string>
    <string name="price2">$2450</string>
    <string name="name3">AMERICAN</string>
    <string name="description3">Pan casero.Burger de carne 200gr. Queso cheddar fundido con panceta crocante y huevo a la plancha</string>
    <string name="price3">$3900</string>
    <string name="name4">LOUIS\' HONOR</string>
    <string name="description4">Pan casero. Doble burger de carne 200gr. Queso azul fundido. Cebolla caramelizada. </string>
    <string name="price4">$4100</string>
    <string name="name5">RICCA</string>
    <string name="description5">Pan casero. Burger de carne 200gr. Queso muzzarella fundido. Aros de cebolla fritos. </string>
    <string name="price5">$3250</string>
    <string name="name6">LAMBHAUS</string>
    <string name="description6">Pan casero. Burger de cordero 190gr. Queso brie fundido con frutos secos. Cebolla al malbec</string>
    <string name="price6">$2780</string>
    <string name="name7">DOUBLE CHEESE and BACON</string>
    <string name="description7">Pan casero. Doble burger de carne 200gr.</string>
    <string name="price7">$4450</string>
    <string name="name8">LASSEN WURST</string>
    <string name="description8">Pan ciabatta de aceitunas. Sandwich de chorizo alemán 140gr. Queso dambo fundido. </string>
    <string name="price8">$3450</string>
    <string name="burger1">TODO</string>
    <string name="burger2">TODO</string>
    <string name="burger3">TODO</string>
    <string name="burger4">TODO</string>
    <string name="burger5">TODO</string>
    <string name="burger6">TODO</string>
    <string name="burger7">TODO</string>
    <string name="burger8">TODO</string>

    <!-- LOGIN-->
    <string name="titulo_login">Ingrese sesión</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="txt_usuario">Ingrese Usuario</string>
    <string name="lbl_password">Contraseña</string>
    <string name="txt_password">Ingrese Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="lbl_crear_cuenta">No tienes cuenta?, Registrate</string>
    <string name="image_description">Descripción de la imágen</string>
    <string name="cd_ingresar">Botón para ingresar a la aplicación</string>
    <string name="cd_crear_cuenta">Enlace para crear una nueva cuenta</string>

    <!-- NAV Y FOOTER -->

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_product">Product</string>
    <string name="menu_register">Register</string>
    <string name="menu_login">Login</string>
    <string name="menu_contact">Contact</string>
    <string name="Copy_ISPC_RICCO_BURGERS">RiccoBurger</string>

    <!-- SPLASH -->

    <string name="welcome_message">Bienvenido a RiccoApp</string>
    <string name="bienvenido_a_riccoapp">Bienvenido a RiccoApp</string>
    <string name="todo">TODO</string>
    <string name="introduzca_aqu_su_mensaje_para_nosotros_nos_comunicaremos_con_usted_en_breve">Introduzca aquí su mensaje para nosotros. Nos comunicaremos con usted en breve.</string>
    <string name="RiccoAPP">Ricco</string>
    <string name="bienvenido">Bienvenido</string>

    <!-- ADMINISTRADOR DE PRDUCTOS-->

    <string name="agregar_producto">Agregar Producto</string>
    <string name="precio_del_producto">Precio del Producto</string>
    <string name="descripcion_del_producto">Descripción del Producto</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="crear_productos">Crear Productos</string>
    <string name="administrador_de_productos">Administrador de Productos</string>
    <string name="logo_de_hamburgesas">logo de hamburgesas</string>
    <string name="opciones">Opciones</string>
    <string-array name="estados_array">
        <item>pendiente</item>
        <item>preparacion</item>
        <item>en_camino</item>
        <item>entregado</item>
        <item>cancelado</item>
    </string-array>


    <!-- ITEM PRODUCTO -->

    <string name="nombre_de_producto">Nombre del Producto</string>
    <string name="descripcion_de_producto">Descripción del Producto</string>
    <string name="precio">Precio</string>
    <string name="edit">Editar</string>
    <string name="guarda">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="sin_stock">SIN STOCK</string>

    <!-- Contacto-->
    <string name="contacto">CONTACTO</string>
    <string name="c_texto">No dudes en ponerte en contacto con nosotros si tienes dudas o sugerencias.</string>
    <string name="c_nombre">Nombre</string>
    <string name="c_apellido">Apellido</string>
    <string name="c_telefono">Teléfono</string>
    <string name="c_email">E-mail</string>
    <string name="mensaje">Mensaje</string>

    <!-- Nosotros -->
    <string name="nosotros">Nosotros</string>
    <string name="text_about">Ricco Burgers nació del fanatismo de las hamburguesas, de un grupo de amigos .. </string>
    <string name="equipo">Nuestro equipo</string>
    <string name="m1">Mariana Cos</string>
    <string name="dev">Team Developer</string>
    <string name="m2">Carla Arévalo</string>
    <string name="m3">Laura Cruz</string>
    <string name="m4">Micaela Juarez</string>
    <string name="m5">Delfina Aricoma</string>
    <string name="m6">Dalma Ponce</string>
    <string name="m7">Melisa Gulle</string>
    <string name="m8">Ernesto Cevasco</string>
    <string name="imagen_description">Foto de amigos.</string>
    <string name="foto_description">Foto de miembro del equipo.</string>

    <!-- Descripción completa para el lector de pantalla -->
    <string name="mariana_full_description">Mariana Cos, desarrolladora. Foto de Mariana Cos.</string>
    <string name="carla_full_description">Carla Arévalo, desarrolladora. Foto de Carla Arévalo.</string>
    <string name="laura_full_description">Laura Cruz, desarrolladora. Foto de Laura Cruz.</string>
    <string name="micaela_full_description">Micaela Juarez, desarrolladora. Foto de Micaela Juarez.</string>
    <string name="delfina_full_description">Delfina Aricoma, desarrolladora. Foto de Delfina Aricoma.</string>
    <string name="dalma_full_description">Dalma Ponce, desarrolladora. Foto de Dalma Ponce.</string>
    <string name="melisa_full_description">Melisa Gulle, desarrolladora. Foto de Melisa Gulle.</string>
    <string name="ernesto_full_description">Ernesto Cevasco, desarrollador. Foto de Ernesto Cevasco.</string>

    <!-- Nombre de cada página para el lector de pantalla -->
    <string name="splash_screen_title">Bienvenidos a Ricco Burguer</string>
    <string name="main_activity_title">Página Principal de Ricco Burguer</string>
    <string name="about_activity_title">Acerca de Ricco Burguer</string>
    <string name="contacto_activity_title">Contáctanos</string>
    <string name="user_profile_activity_title">Perfil de Usuario</string>
    <string name="admin_activity_title">Administrador de Productos</string>
    <string name="products_activity_title">Productos</string>
    <string name="registro_activity_title">Registro de Usuario</string>
    <string name="login_activity_title">Iniciar sesión</string>


</resources>

