<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272728"
    tools:context=".MainActivity">

    <!-- Incluir la Toolbar -->
    <include
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TextView para el nombre del usuario -->
    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />

    <!-- Título: Nosotros -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/nosotros"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Descripción de Nosotros -->
    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/text_about"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <!-- Imagen de amigos -->
    <ImageView
        android:id="@+id/amigos_img"
        android:layout_width="395dp"
        android:layout_height="109dp"
        android:contentDescription="@string/imagen_description"
        android:scaleType="centerCrop"

        android:src="@drawable/amigos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />


    <!-- Miembros del equipo -->

    <TextView
        android:id="@+id/team_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/equipo"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amigos_img" />

    <GridLayout
        android:id="@+id/team_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:padding="16dp"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team_title">

        <!-- Miembro del equipo 1 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="6dp"
            android:contentDescription="@string/mariana_full_description">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/mariana_full_description"
                android:scaleType="centerCrop"
                android:src="@drawable/mariana" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/m1"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dev"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Miembro del equipo 2 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="6dp"
            android:contentDescription="@string/carla_full_description">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/carla_full_description"
                android:scaleType="centerCrop"
                android:src="@drawable/carla" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/m2"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dev"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Miembro del equipo 3 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="6dp"
            android:contentDescription="@string/laura_full_description">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/laura_full_description"
                android:scaleType="centerCrop"
                android:src="@drawable/laura"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/m3"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dev"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Miembro del equipo 4 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="6dp"
            android:contentDescription="@string/micaela_full_description">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/micaela_full_description"
                android:scaleType="centerCrop"
                android:src="@drawable/micaela" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/m4"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dev"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Miembro del equipo 5
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="6dp"
            android:contentDescription="@string/delfina_full_description">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/foto_description"
                android:scaleType="centerCrop"
                android:src="@drawable/delfina"

                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/foto_description"
                android:gravity="center"
                android:text="@string/m5"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dev"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
        </LinearLayout>-->

        <!-- Miembro del equipo 6 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="6dp"
            android:contentDescription="@string/dalma_full_description">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/dalma_full_description"
                android:scaleType="centerCrop"
                android:src="@drawable/dalma" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/m6"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dev"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
        </LinearLayout>
        <!-- Miembro del equipo 7 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="6dp"
            android:contentDescription="@string/melisa_full_description">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/melisa_full_description"
                android:scaleType="centerCrop"
                android:src="@drawable/melisa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/m7"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dev"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
        </LinearLayout>
        <!-- Miembro del equipo 8 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="6dp"
            android:contentDescription="@string/ernesto_full_description">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/ernesto_full_description"
                android:scaleType="centerCrop"
                android:src="@drawable/ernesto" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/m8"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dev"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
        </LinearLayout>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>